--- a/scss/page/_responsive-mobile.scss
+++ b/scss/page/_responsive-mobile.scss
@@ -548,7 +548,7 @@
         .epilogue-answer{
           font-size: $body;
           line-height: 1.6;
-          padding-left: 20px;
+          padding: 0 20px;
         }
         &:last-child{
           .epilogue-question{
