--- a/css/main.css
+++ b/css/main.css
@@ -1922,7 +1922,7 @@ footer .footer-copyright {
   .epilogue .epilogue-content .epilogue-items .epilogue-answer {
     font-size: 15px;
     line-height: 1.6;
-    padding-left: 20px;
+    padding: 0 20px;
   }
   .epilogue .epilogue-content .epilogue-items:last-child .epilogue-question span:last-child {
     display: inline;
