--- a/css/main.css
+++ b/css/main.css
@@ -181,8 +181,7 @@ h6 {
 }
 .intro .side.left {
   background: #CFC5A1;
-  -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
   top: 0;
   left: 0;
   -webkit-transform: translateX(-100%);
@@ -190,8 +189,7 @@ h6 {
 }
 .intro .side.right {
   background: #454545;
-  -webkit-clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
-          clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
+  clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
   top: 0;
   right: 0;
   -webkit-transform: translateX(100%);
@@ -735,6 +733,8 @@ h6 {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 60px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .portfolio-hub .input-wrap .option-wrap .sub-title h6 {
   margin: 0 0 10px;
@@ -779,7 +779,8 @@ h6 {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 25px;
-  flex-wrap : wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .portfolio-hub .tab-wrap .tab-list li a {
   -webkit-transition: 0.5s;
@@ -814,7 +815,7 @@ h6 {
       -ms-flex-align: stretch;
           align-items: stretch;
 }
-.portfolio-hub .portfolio-content .portfolio-left {
+.portfolio-hub .portfolio-content .portfolio-right {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -830,24 +831,27 @@ h6 {
           justify-content: space-between;
   font-size: 18px;
 }
-.portfolio-hub .portfolio-content .portfolio-left .portfolio-title p {
+.portfolio-hub .portfolio-content .portfolio-right .portfolio-title p {
   margin: 20px 0;
   line-height: 1.5;
 }
-.portfolio-hub .portfolio-content .portfolio-left .portfolio-info {
+.portfolio-hub .portfolio-content .portfolio-right .portfolio-info {
   margin: 20px 0;
 }
-.portfolio-hub .portfolio-content .portfolio-left .portfolio-info p {
+.portfolio-hub .portfolio-content .portfolio-right .portfolio-info p {
   margin: 10px 0;
   font-weight: 700;
 }
-.portfolio-hub .portfolio-content .portfolio-left .portfolio-info p span {
+.portfolio-hub .portfolio-content .portfolio-right .portfolio-info p span {
   font-weight: 400;
 }
-.portfolio-hub .portfolio-content .portfolio-left .portfolio-btn-wrap {
+.portfolio-hub .portfolio-content .portfolio-right .portfolio-btn-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 .portfolio-btn {
   display: block;
@@ -871,12 +875,12 @@ h6 {
   background: #898989;
 }
 
-.portfolio-hub .portfolio-content .portfolio-left.active {
+.portfolio-hub .portfolio-content .portfolio-right.active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-.portfolio-hub .portfolio-content .portfolio-right {
+.portfolio-hub .portfolio-content .portfolio-left {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -884,7 +888,7 @@ h6 {
   min-height: 360px;
   position: relative;
 }
-.portfolio-hub .portfolio-content .portfolio-right .monitor {
+.portfolio-hub .portfolio-content .portfolio-left .monitor {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -897,20 +901,20 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
 }
-.portfolio-hub .portfolio-content .portfolio-right .monitor img {
+.portfolio-hub .portfolio-content .portfolio-left .monitor img {
   width: 70%;
 }
-.portfolio-hub .portfolio-content .portfolio-right .phone {
+.portfolio-hub .portfolio-content .portfolio-left .phone {
   width: 30%;
   z-index: 10;
   position: absolute;
   bottom: 0;
   right: 5%;
 }
-.portfolio-hub .portfolio-content .portfolio-right .phone img {
+.portfolio-hub .portfolio-content .portfolio-left .phone img {
   width: 70%;
 }
-.portfolio-hub .portfolio-content .portfolio-right.active {
+.portfolio-hub .portfolio-content .portfolio-left.active {
   display: block;
 }
 .portfolio-hub .portfolio-popup-wrap {
@@ -1229,34 +1233,34 @@ footer .footer-copyright {
   .portfolio-hub .portfolio-content {
     gap: 30px;
   }
-  .portfolio-hub .portfolio-content .portfolio-left {
+  .portfolio-hub .portfolio-content .portfolio-right {
     -webkit-box-flex: 1;
         -ms-flex: auto;
             flex: auto;
     width: 70%;
   }
-  .portfolio-hub .portfolio-content .portfolio-right {
+  .portfolio-hub .portfolio-content .portfolio-left {
     -webkit-box-flex: 1;
         -ms-flex: auto;
             flex: auto;
     width: 30%;
   }
-  .portfolio-hub .portfolio-content .portfolio-right .monitor {
+  .portfolio-hub .portfolio-content .portfolio-left .monitor {
     display: none;
   }
-  .portfolio-hub .portfolio-content .portfolio-right .phone {
+  .portfolio-hub .portfolio-content .portfolio-left .phone {
     width: 85%;
     z-index: 10;
     position: absolute;
     top: 10%;
     right: 0;
   }
-  .portfolio-hub .portfolio-content .portfolio-right .phone img {
+  .portfolio-hub .portfolio-content .portfolio-left .phone img {
     width: 70%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .portfolio-hub .portfolio-content .portfolio-right.active {
+  .portfolio-hub .portfolio-content .portfolio-left.active {
     display: block;
   }
   .portfolio-hub .portfolio-popup-wrap .popup-close-btn {
@@ -1784,7 +1788,7 @@ footer .footer-copyright {
         -ms-flex-align: stretch;
             align-items: stretch;
   }
-  .portfolio-hub .portfolio-content .portfolio-left {
+  .portfolio-hub .portfolio-content .portfolio-right {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
@@ -1800,20 +1804,20 @@ footer .footer-copyright {
             justify-content: space-between;
     font-size: 15px;
   }
-  .portfolio-hub .portfolio-content .portfolio-left .portfolio-title p {
+  .portfolio-hub .portfolio-content .portfolio-right .portfolio-title p {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 13px;
   }
-  .portfolio-hub .portfolio-content .portfolio-left .portfolio-btn-wrap {
+  .portfolio-hub .portfolio-content .portfolio-right .portfolio-btn-wrap {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
-  .portfolio-hub .portfolio-content .portfolio-left .portfolio-btn-wrap .portfolio-btn {
+  .portfolio-hub .portfolio-content .portfolio-right .portfolio-btn-wrap .portfolio-btn {
     margin-right: 15px;
   }
-  .portfolio-hub .portfolio-content .portfolio-right {
+  .portfolio-hub .portfolio-content .portfolio-left {
     display: none;
   }
   .portfolio-hub .portfolio-popup-wrap {
