--- a/scss/page/_responsive-mobile.scss
+++ b/scss/page/_responsive-mobile.scss
@@ -458,7 +458,7 @@
           }
         }
         .portfolio-btn-wrap{
-          display: flex;
+          display: flex; padding-right: 0;
           .portfolio-btn{
             margin-right: 15px;
           }
