--- a/scss/page/_style.scss
+++ b/scss/page/_style.scss
@@ -1,66 +1,30 @@
 /* ########## intro ########## */
 .intro{
   width: 100%; height: 100vh; min-height: max-content;
-  display: flex; justify-content: center; align-items: center; position: relative;
+  display: flex; justify-content: center; align-items: center; flex-direction: column;
   overflow: hidden;
   z-index: 10000;
-  .side {
-    width: 60%;
-    height: 100%;
-    position: absolute;
-    transition: 1s ease;
-    &.left {
-      background: $main-beige;
-      clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
-      top: 0; left: 0;
-      transform: translateX(-100%);
-    }
-    &.right {
-      background: $main-black;
-      clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
-      top: 0; right: 0;
-      transform: translateX(100%);
-    }
-    &.show {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    &.hide-left {
-      transform: translateX(-100%);
-      opacity: 0;
-    }
-    &.hide-right {
-      transform: translateX(100%);
-      opacity: 0;
-    } 
-  }
-  .intro-text-wrap{
-    position: absolute;
-    top: 50%; transform: translateY(-50%); left: 10%;
-    color: $white;
-    transition: 0.8s ease;
-    opacity: 0;
-    h1{
-      font-family: $primary-en;
-      margin-bottom: -30px;
-      padding-left: 20px;
-    }
+  background: $main-beige;
+  .text-wrap{
+    font-size: 80px;
+    font-weight: 600;
+    color: $background;
+    text-align: center;
+    margin-top: auto;
     p{
-      font-size: $intro-big-title;
-      font-family: $primary-en;
+      margin: 5px 0;
     }
-    h2{
-      padding-left: 20px;
-      margin-bottom: -5px;
-      strong{
-        color: $main-black;
-      }
+    span{
+      color: $main-black;
     }
-    &.show {
-      opacity: 1;
-    }
-    &.hide {
-      opacity: 0;
+  }
+  .fa-arrow-down{
+    margin-top: auto; margin-bottom: 4%;
+    font-size: 50px;
+    animation: arrowAni01 .8s linear infinite alternate;
+    @keyframes arrowAni01 {
+      0%{transform: translateY(5px);}
+      100%{transform: translateY(-5px);}
     }
   }
 }
@@ -503,8 +467,7 @@
         }
       }
       .portfolio-btn-wrap{
-        display: flex; justify-content: flex-end;
-        padding-right: 15%;
+        display: flex; 
         @at-root .portfolio-btn{
           display: block;
           width: max-content;
