--- a/scss/page/_style.scss
+++ b/scss/page/_style.scss
@@ -445,6 +445,7 @@
   .portfolio-content{
     height: auto;
     display: flex; gap: 60px;
+    margin-top: 60px;
     align-items: stretch;
     .portfolio-right{
       flex: 1;
