--- a/css/main.css
+++ b/css/main.css
@@ -784,6 +784,7 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   gap: 60px;
+  margin-top: 60px;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
